# gnome-builder

./: configure.ac
plugins/: Makefile.am
plugins/clang-format/: Makefile.am  clang-format-plugin.c  clang-format.plugin  configure.ac  gb-clang-format-workbench-addin.c  gb-clang-format-workbench-addin.h  gb-formatter-options-prefs.c  gb-formatter-options-prefs.h  gb-formatter-options.c  gb-formatter-options.h  gb-formatter.c  gb-formatter.h
plugins/clang-format/gsettings/: org.gnome.builder.plugins.clang_format_plugin.gschema.xml
